--- a/assests/pages/sponsors.html
+++ b/assests/pages/sponsors.html
@@ -626,7 +626,89 @@
     </div>
   </div>
 
-  
+  <div class="sponsor14 box p-lg-5 p-md-5 p-sm-5">
+    <div class="container">
+      <p class="h1">Our Auto Partner</p>
+      <div class="s1 gap-4">
+        <div class="row img col-lg-6 col-md-6 col-12">
+          <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
+            src="/assests/img/auto.jpg">
+        </div>
+        <div class="spons-para row content col-lg-6 col-md-6 col-12">
+          <p class="h2">Sheetal Auto Accesories</p>
+          <p class="d-flex text-capitalize fs-5">Soni's Tattoo & Nail Art Studio is the premier destination for body art
+            and nail artistry, offering a unique blend of creativity, precision, and professionalism. Specializing in
+            custom tattoos and intricate nail designs, Soni's Studio is dedicated to helping clients express their
+            individuality through stunning, personalized art. The studio features a team of talented artists who are
+            passionate about their craft, ensuring each piece is executed with the highest level of detail and artistry.
+            <br>
+            <br>
+            At Soni's Tattoo & Nail Art Studio, the focus is on providing a comfortable and welcoming environment where
+            clients can bring their creative visions to life. Using top-of-the-line equipment and adhering to strict
+            hygiene standards, the studio ensures a safe and enjoyable experience for every client. Whether you're
+            looking for a meaningful tattoo, an eye-catching nail design, or both, Soni's Studio is committed to
+            delivering exceptional artistry that you can proudly wear.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="sponsor17 box p-lg-5 p-md-5 p-sm-5">
+    <div class="container">
+      <p class="text-black">Our Caters Partner</p>
+      <div class="s1 gap-4">
+        <div class="spons-para row content col-lg-6 col-md-6 col-12">
+          <p class="h2">S H Caters</p>
+          <p class="d-flex text-capitalize fs-5">Soni's Tattoo & Nail Art Studio is the premier destination for body art
+            and nail artistry, offering a unique blend of creativity, precision, and professionalism. Specializing in
+            custom tattoos and intricate nail designs, Soni's Studio is dedicated to helping clients express their
+            individuality through stunning, personalized art. The studio features a team of talented artists who are
+            passionate about their craft, ensuring each piece is executed with the highest level of detail and artistry.
+            <br>
+            <br>
+            At Soni's Tattoo & Nail Art Studio, the focus is on providing a comfortable and welcoming environment where
+            clients can bring their creative visions to life. Using top-of-the-line equipment and adhering to strict
+            hygiene standards, the studio ensures a safe and enjoyable experience for every client. Whether you're
+            looking for a meaningful tattoo, an eye-catching nail design, or both, Soni's Studio is committed to
+            delivering exceptional artistry that you can proudly wear.
+          </p>
+        </div>
+        <div class="row img col-lg-6 col-md-6 col-12">
+          <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
+            src="/assests/img/shcaters logo.jpg">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="sponsor14 box p-lg-5 p-md-5 p-sm-5">
+    <div class="container">
+      <p class="h1">Our Silencer Partner</p>
+      <div class="s1 gap-4">
+        <div class="row img col-lg-6 col-md-6 col-12">
+          <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
+            src="/assests/img/silman logo.jpg">
+        </div>
+        <div class="spons-para row content col-lg-6 col-md-6 col-12">
+          <p class="h2">Silman Widest Range of Silancers</p>
+          <p class="d-flex text-capitalize fs-5">Soni's Tattoo & Nail Art Studio is the premier destination for body art
+            and nail artistry, offering a unique blend of creativity, precision, and professionalism. Specializing in
+            custom tattoos and intricate nail designs, Soni's Studio is dedicated to helping clients express their
+            individuality through stunning, personalized art. The studio features a team of talented artists who are
+            passionate about their craft, ensuring each piece is executed with the highest level of detail and artistry.
+            <br>
+            <br>
+            At Soni's Tattoo & Nail Art Studio, the focus is on providing a comfortable and welcoming environment where
+            clients can bring their creative visions to life. Using top-of-the-line equipment and adhering to strict
+            hygiene standards, the studio ensures a safe and enjoyable experience for every client. Whether you're
+            looking for a meaningful tattoo, an eye-catching nail design, or both, Soni's Studio is committed to
+            delivering exceptional artistry that you can proudly wear.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
