changes in line

--- a/assests/pages/sponsors.html
+++ b/assests/pages/sponsors.html
@@ -58,7 +58,7 @@
     </div>
   </nav>
   <!-- ----------------------------------------sponsors------------------------------------------ -->
-  <div class="sponsor8 box p-lg-5 p-md-5 p-sm-5"></div>
+  <div class="sponsor8 box p-lg-5 p-md-5 p-sm-5">
   <div class="container">
     <p class="h1">Our Title Sponsor</p>
     <div class="s2 gap-4">
@@ -85,16 +85,17 @@
     </div>
   </div>
   </div>
+
   <hr>
-  <div class="sponsor5 box p-lg-5 p-md-5 p-sm-5"></div>
+  <div class="sponsor box p-lg-5 p-md-5 p-sm-5">
   <div class="container">
-    <p class="h1">Our Jewells Partners</p>
+    <p class="h1">Our Partners</p>
     <div class="s1 gap-4">
       <div class="row img col-lg-6 col-md-6 col-12">
         <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x" src="">
       </div>
       <div class="spons-para row content col-lg-6 col-md-6 col-12">
-        <p class="h2">ABS Jewellers</p>
+        <p class="h2"></p>
         <p class="d-flex text-capitalize fs-5">ABS Jewellers is a distinguished name in the world of fine jewellery,
           celebrated for its exquisite designs and exceptional craftsmanship. Renowned for its wide array of
           meticulously crafted pieces, ABS Jewellers offers an extensive collection of gold, diamond, and precious
@@ -114,7 +115,8 @@
   </div>
   </div>
   <hr>
-  <div class="sponsor5 box p-lg-5 p-md-5 p-sm-5"></div>
+  
+  <div class="sponsor5 box p-lg-5 p-md-5 p-sm-5">
   <div class="container">
     <p class="h1">Our Jewells Partners</p>
     <div class="s1 gap-4">
