--- a/assests/pages/sponsors.html
+++ b/assests/pages/sponsors.html
@@ -87,36 +87,64 @@
   </div>
 
   <hr>
-  <div class="sponsor box p-lg-5 p-md-5 p-sm-5">
-  <div class="container">
-    <p class="h1">Our Partners</p>
-    <div class="s1 gap-4">
-      <div class="row img col-lg-6 col-md-6 col-12">
-        <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x" src="">
-      </div>
-      <div class="spons-para row content col-lg-6 col-md-6 col-12">
-        <p class="h2"></p>
-        <p class="d-flex text-capitalize fs-5">ABS Jewellers is a distinguished name in the world of fine jewellery,
-          celebrated for its exquisite designs and exceptional craftsmanship. Renowned for its wide array of
-          meticulously crafted pieces, ABS Jewellers offers an extensive collection of gold, diamond, and precious
-          gemstone jewellery. Each piece is a blend of traditional artistry and contemporary elegance, ensuring that
-          every customer finds something that resonates with their personal style and occasion.
-          <br>
-          <br>
-          With a commitment to quality and customer satisfaction, ABS Jewellers has built a reputation for excellence.
-          The store's knowledgeable and friendly staff provide a personalized shopping experience, guiding customers
-          through their extensive collection to find the perfect piece for every milestone and celebration. Whether
-          you are looking for a timeless wedding set, an elegant gift, or a statement piece to add to your collection,
-          ABS Jewellers is your ultimate destination for jewellery that embodies beauty, tradition, and
-          sophistication.
-        </p>
+
+  <div class="sponsor20 box p-lg-5 p-md-5 p-sm-5">
+    <div class="container">
+      <p class="h1">Our Co-Title</p>
+      <div class="s1 gap-4">
+        <div class="row img col-lg-6 col-md-6 col-12">
+          <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
+            src="/assests/img/sanskruti logo.jpg">
+        </div>
+        <div class="spons-para row content col-lg-6 col-md-6 col-12">
+          <p class="h2">Sanskruti Elite</p>
+          <p class="d-flex text-capitalize fs-5">Soni's Tattoo & Nail Art Studio is the premier destination for body art
+            and nail artistry, offering a unique blend of creativity, precision, and professionalism. Specializing in
+            custom tattoos and intricate nail designs, Soni's Studio is dedicated to helping clients express their
+            individuality through stunning, personalized art. The studio features a team of talented artists who are
+            passionate about their craft, ensuring each piece is executed with the highest level of detail and artistry.
+            <br>
+            <br>
+            At Soni's Tattoo & Nail Art Studio, the focus is on providing a comfortable and welcoming environment where
+            clients can bring their creative visions to life. Using top-of-the-line equipment and adhering to strict
+            hygiene standards, the studio ensures a safe and enjoyable experience for every client. Whether you're
+            looking for a meaningful tattoo, an eye-catching nail design, or both, Soni's Studio is committed to
+            delivering exceptional artistry that you can proudly wear.
+          </p>
+        </div>
       </div>
     </div>
   </div>
-  </div>
-  <hr>
 
-  <div class="sponsor5 box p-lg-5 p-md-5 p-sm-5">
+  <div class="sponsor1 box p-lg-5 p-md-5 p-sm-5">
+    <div class="container">
+      <p class="h1">Our Venue Partner</p>
+      <div class="s1 gap-4">
+        <div class="spons-para row content col-lg-6 col-md-6 col-12">
+          <p class="h2">Vivanta</p>
+          <p class="d-flex text-capitalize fs-5">With a portfolio that encompasses a wide range of residential,
+            commercial, and mixed-use projects, Vivanta is dedicated to creating spaces that embody luxury, comfort, and
+            modern living. Each project by Vivanta is a testament to meticulous planning, superior craftsmanship, and
+            sustainable practices, ensuring that every development is a valuable addition to the community.
+            <br>
+            <br>
+            We are not just about building structures; it’s about building lifestyles. The group
+            focuses on delivering projects that meet the highest standards of quality and design, catering to the
+            diverse needs of its clients. Whether you are looking for your dream home, a prime commercial space, or a
+            lucrative investment opportunity, We offers exceptional options that promise value and satisfaction.
+            With a customer-centric approach, We are dedicated to enhancing living standards,
+            making it the preferred choice for discerning buyers and investors.
+          </p>
+        </div>
+        <div class="row img col-lg-6 col-md-6 col-12">
+          <img class="col-lg-12 col-md-12 col-sm-12 col-12 position-relative top-50 start-50 translate-middle-x"
+            src="/assests/img/Vivanta Logo.pdf.png">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- <div class="sponsor5 box p-lg-5 p-md-5 p-sm-5">
   <div class="container">
     <p class="h1">Our Jewells Partners</p>
     <div class="s1 gap-4">
@@ -172,33 +200,7 @@
     </div>
   </div>
 
-  <div class="sponsor1 box p-lg-5 p-md-5 p-sm-5">
-    <div class="container">
-      <p class="h1">Our Venue Partner</p>
-      <div class="s1 gap-4">
-        <div class="spons-para row content col-lg-6 col-md-6 col-12">
-          <p class="h2">Vivanta</p>
-          <p class="d-flex text-capitalize fs-5">With a portfolio that encompasses a wide range of residential,
-            commercial, and mixed-use projects, Vivanta is dedicated to creating spaces that embody luxury, comfort, and
-            modern living. Each project by Vivanta is a testament to meticulous planning, superior craftsmanship, and
-            sustainable practices, ensuring that every development is a valuable addition to the community.
-            <br>
-            <br>
-            We are not just about building structures; it’s about building lifestyles. The group
-            focuses on delivering projects that meet the highest standards of quality and design, catering to the
-            diverse needs of its clients. Whether you are looking for your dream home, a prime commercial space, or a
-            lucrative investment opportunity, We offers exceptional options that promise value and satisfaction.
-            With a customer-centric approach, We are dedicated to enhancing living standards,
-            making it the preferred choice for discerning buyers and investors.
-          </p>
-        </div>
-        <div class="row img col-lg-6 col-md-6 col-12">
-          <img class="col-lg-12 col-md-12 col-sm-12 col-12 position-relative top-50 start-50 translate-middle-x"
-            src="/assests/img/Vivanta Logo.pdf.png">
-        </div>
-      </div>
-    </div>
-  </div>
+  
 
   <div class="sponsor9 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
@@ -515,7 +517,7 @@
   </div>
 
 
-  <!-- <div class="sponsor9 box p-lg-5 p-md-5 p-sm-5">
+  <div class="sponsor9 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
       <p class="h1">Our Build Partner</p>
       <div class="s1 gap-4">
@@ -540,7 +542,7 @@
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
 
   <div class="sponsor13 box p-lg-5 p-md-5 p-sm-5">
     <div class="container">
@@ -738,36 +740,10 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   
 
-  <div class="sponsor20 box p-lg-5 p-md-5 p-sm-5">
-    <div class="container">
-      <p class="h1">Our Elite Partner</p>
-      <div class="s1 gap-4">
-        <div class="row img col-lg-6 col-md-6 col-12">
-          <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
-            src="/assests/img/sanskruti logo.jpg">
-        </div>
-        <div class="spons-para row content col-lg-6 col-md-6 col-12">
-          <p class="h2">Sanskruti Elite</p>
-          <p class="d-flex text-capitalize fs-5">Soni's Tattoo & Nail Art Studio is the premier destination for body art
-            and nail artistry, offering a unique blend of creativity, precision, and professionalism. Specializing in
-            custom tattoos and intricate nail designs, Soni's Studio is dedicated to helping clients express their
-            individuality through stunning, personalized art. The studio features a team of talented artists who are
-            passionate about their craft, ensuring each piece is executed with the highest level of detail and artistry.
-            <br>
-            <br>
-            At Soni's Tattoo & Nail Art Studio, the focus is on providing a comfortable and welcoming environment where
-            clients can bring their creative visions to life. Using top-of-the-line equipment and adhering to strict
-            hygiene standards, the studio ensures a safe and enjoyable experience for every client. Whether you're
-            looking for a meaningful tattoo, an eye-catching nail design, or both, Soni's Studio is committed to
-            delivering exceptional artistry that you can proudly wear.
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
+  
 
 
 
