--- a/assests/pages/sponsors.html
+++ b/assests/pages/sponsors.html
@@ -59,31 +59,33 @@
   </nav>
   <!-- ----------------------------------------sponsors------------------------------------------ -->
   <div class="sponsor8 box p-lg-5 p-md-5 p-sm-5">
-  <div class="container">
-    <p class="h1">Our Title Sponsor</p>
-    <div class="s2 gap-4">
-      <div class="spons-para row content col-lg-6 col-md-6 col-12">
-        <p class="h2">Transit Developer PVT. LTD.</p>
-        <p class="d-flex text-capitalize fs-5">A heartfelt thank you to Transit Developer Pvt. Ltd. for being the title
-          sponsor of Ramzat 2024. Your support is instrumental in making this Navratri celebration a success. We deeply
-          appreciate your commitment to our cultural heritage and look forward to a fantastic event together! Your
-          support plays a vital role in bringing this Navratri celebration to life and helping us create a vibrant,
-          unforgettable event.
-          <br>
-          <br>
-          Transit Developer Pvt. Ltd.'s commitment to community and cultural heritage aligns perfectly with the spirit
-          of Navratri, and we are thrilled to have them as our partner. Their generosity and belief in our vision make
-          this event possible, and we look forward to an amazing festival together.
+    <div class="container">
+      <p class="h1">Our Title Sponsor</p>
+      <div class="s2 gap-4">
+        <div class="spons-para row content col-lg-6 col-md-6 col-12">
+          <p class="h2">Transit Developer PVT. LTD.</p>
+          <p class="d-flex text-capitalize fs-5">A heartfelt thank you to Transit Developer Pvt. Ltd. for being the
+            title
+            sponsor of Ramzat 2024. Your support is instrumental in making this Navratri celebration a success. We
+            deeply
+            appreciate your commitment to our cultural heritage and look forward to a fantastic event together! Your
+            support plays a vital role in bringing this Navratri celebration to life and helping us create a vibrant,
+            unforgettable event.
+            <br>
+            <br>
+            Transit Developer Pvt. Ltd.'s commitment to community and cultural heritage aligns perfectly with the spirit
+            of Navratri, and we are thrilled to have them as our partner. Their generosity and belief in our vision make
+            this event possible, and we look forward to an amazing festival together.
 
-          Thank you once again to Transit Developer Pvt. Ltd. for your invaluable support!
-        </p>
-      </div>
-      <div class="row img col-lg-6 col-md-6 col-12">
-        <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
-          src="/assests/img/transit.jpg">
+            Thank you once again to Transit Developer Pvt. Ltd. for your invaluable support!
+          </p>
+        </div>
+        <div class="row img col-lg-6 col-md-6 col-12">
+          <img class="col-lg-10 col-md-10 col-sm-10 col-12 position-relative top-50 start-50 translate-middle-x"
+            src="/assests/img/transit.jpg">
+        </div>
       </div>
     </div>
-  </div>
   </div>
 
   <hr>
@@ -143,6 +145,45 @@
       </div>
     </div>
   </div>
+
+  <div class="container">
+    <div class="team">
+      <span>OUR <span class="ourtm">SPONSORS</span></span>
+    </div>
+      <div class="card"> 
+        <div class="grid-img">
+          <div class="column gallery">
+            <img src="/assests/img/abs jewellery.png">
+            <img src="/assests/img/opera logo.jpg">
+            <img src="/assests/img/blush.jpg">
+            <img src="/assests/img/nirali logo.jpg">
+            <img src="/assests/img/shcaters logo.jpg">
+          </div>
+          <div class="column gallery">
+            <img src="/assests/img/nilkanth logo.jpg">
+            <img src="/assests/img/n7 logo.png">
+            <img src="/assests/img//Soni's Both White.jpg">
+            <img src="/assests/img/paint logo.jpg">
+            <img src="/assests/img/silman logo.jpg">
+          </div> 
+          <div class="column gallery">
+            <img src="/assests/img/NAVSARI 360 logo.png"> 
+            <img src="/assests/img/marketing.jpg">
+            <img src="/assests/img/alaska logo.jpg">
+            <img src="/assests/img/auto.jpg">
+            <img src="/assests/img/pramukh logo.jpg">
+          </div>
+          <div class="column gallery">
+            <img src="/assests/img/nikki logo.jpg">
+            <img src="/assests/img/nutritius logo.jpg"> 
+            <img src="/assests/img/sheetal logo.jpg"> 
+            <img src="/assests/img/sk logo.jpg"> 
+          </div>
+        </div>
+    </div>
+    <div id="fullpage" onclick="this.style.display='none';"></div>
+  </div>
+
 
   <!-- <div class="sponsor5 box p-lg-5 p-md-5 p-sm-5">
   <div class="container">
@@ -741,9 +782,9 @@
       </div>
     </div>
   </div> -->
-  
 
-  
+
+
 
 
 
