--- a/assests/pages/sponsors.html
+++ b/assests/pages/sponsors.html
@@ -151,30 +151,34 @@
         <div class="grid-img">
           <div class="column gallery">
             <img src="/assests/img/abs jewellery.png">
-            <img src="/assests/img/nirali logo.jpg">
             <img src="/assests/img/nutritius logo.jpg"> 
-            <img src="/assests/img/blush.jpg">
-            <img src="/assests/img/shcaters logo.jpg">
+            
+            <img src="/assests/img/NAVSARI 360 logo.png">
+            <img src="/assests/img/shcaters logo.jpg"> 
           </div>
           <div class="column gallery">
             <img src="/assests/img/opera logo.jpg">
             <img src="/assests/img/marketing.jpg">
-            <img src="/assests/img/paint logo.jpg">
             <img src="/assests/img/n7 logo.png">
+            <img src="/assests/img/pramukh logo.jpg">
           </div> 
           <div class="column gallery">
-            <img src="/assests/img/NAVSARI 360 logo.png"> 
             <img src="/assests/img/auto.jpg">
-            <img src="/assests/img/silman logo.jpg">
+            <img src="/assests/img/sk logo.jpg"> 
+            <img src="/assests/img/nilkanth logo.jpg">
             <img src="/assests/img/alaska logo.jpg">
-            <img src="/assests/img/pramukh logo.jpg">
+            
           </div>
           <div class="column gallery">
             <img src="/assests/img/nikki logo.jpg">
-            <img src="/assests/img/sk logo.jpg"> 
+            <img src="/assests/img/silman logo.jpg">
             <img src="/assests/img/sheetal logo.jpg"> 
             <img src="/assests/img//Soni's Both White.jpg">
-            <img src="/assests/img/nilkanth logo.jpg">
+          </div>
+          <div class="column gallery">
+            <img src="/assests/img/nirali logo.jpg">
+            <img src="/assests/img/paint logo.jpg">
+            <img src="/assests/img/blush.jpg">
           </div>
         </div>
     </div>
