--- a/assests/pages/sponsors.html
+++ b/assests/pages/sponsors.html
@@ -157,7 +157,7 @@
             <img src="/assests/img/shcaters logo.jpg"> 
           </div>
           <div class="column gallery">
-            <img src="/assests/img/abs jewellery.png">
+            <img src="/assests/img/abs logo.jpg">
             <img src="/assests/img/opera logo.jpg">
             <img src="/assests/img/lords logo.jpg">
             <img src="/assests/img/n7 logo.png">
