--- a/assests/pages/sponsors.html
+++ b/assests/pages/sponsors.html
@@ -153,35 +153,43 @@
             <img src="/assests/img/ndshah logo.jpg">
             <img src="/assests/img/nutritius logo.jpg"> 
             <img src="/assests/img/marketing.jpg">
+            <img src="/assests/img/msedu logo.jpg">
             <img src="/assests/img/NAVSARI 360 logo.png">
             <img src="/assests/img/shcaters logo.jpg"> 
+            <img src="/assests/img/abhay logo.jpg"> 
           </div>
           <div class="column gallery">
             <img src="/assests/img/abs logo.jpg">
             <img src="/assests/img/opera logo.jpg">
-            <img src="/assests/img/lords logo.jpg">
+            <img src="/assests/img/steel logo.jpg">
+            <img src="/assests/img/lordkrishna.jpg">
             <img src="/assests/img/n7 logo.png">
             <img src="/assests/img/pramukh logo.jpg">
+            <img src="/assests/img/parasnath logo.jpg">
           </div> 
           <div class="column gallery">
             <img src="/assests/img/auto.jpg">
             <img src="/assests/img/sk logo.jpg"> 
-            <img src="/assests/img/sannari logo.jpg">
-            <img src="/assests/img/nilkanth logo.jpg">
+            <img src="/assests/img/lords logo.jpg">
+            <img src="/assests/img/abdent logo.jpg">
+            <img src="/assests/img/mkayz logo.jpg">
             <img src="/assests/img/alaska logo.jpg">
             
           </div>
           <div class="column gallery">
             <img src="/assests/img/nikki logo.jpg">
             <img src="/assests/img/silman logo.jpg">
-            <img src="/assests/img/rjs logo.jpg">
+            <img src="/assests/img/sannari logo.jpg">
+            <img src="/assests/img/djmehul logo.jpg">
             <img src="/assests/img/sheetal logo.jpg"> 
             <img src="/assests/img//Soni's Both White.jpg">
           </div>
           <div class="column gallery">
             <img src="/assests/img/nirali logo.jpg">
             <img src="/assests/img/paint logo.jpg">
-            <img src="/assests/img/msedu logo.jpg">
+            <img src="/assests/img/rjs logo.jpg">
+            <img src="/assests/img/sagar.jpg">
+            <img src="/assests/img/nilkanth logo.jpg">
             <img src="/assests/img/blush.jpg">
           </div>
         </div>
