--- a/assests/pages/about.html
+++ b/assests/pages/about.html
@@ -161,10 +161,10 @@
         <h5 class="head-name">Bhavik Shah</h5>
       </div>
       
-      <div class="card">
+      <!-- <div class="card">
         <img class="card-img" src="/assests/img/shreyal.jpg" alt="">
         <h5 class="head-name">Shreyal Shah</h5>
-      </div>
+      </div> -->
     </div>
 
 
