--- a/index.html
+++ b/index.html
@@ -151,48 +151,48 @@
           <div class="carousel-item active">
             <div class="row gap-0 row-gap-3 grid justify-content-center">
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132022.png" alt="First slide">
+                <img class="img-item rounded-4" src="assests/img/VDS09352.JPG" alt="First slide">
               </div>
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132045.png" alt="First slide">
+                <img class="img-item rounded-4" src="assests/img/VDS00996.JPG" alt="First slide">
               </div>
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132139.png" alt="First slide">
+                <img class="img-item rounded-4" src="assests/img/VDS00995.JPG" alt="First slide">
               </div>
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132206.png" alt="First slide">
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="row gap-0 row-gap-3 grid justify-content-center">
-              <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132312.png" alt="First slide">
-              </div>
-              <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132330.png" alt="First slide">
-              </div>
-              <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132433.png" alt="First slide">
-              </div>
-              <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132504.png" alt="First slide">
+                <img class="img-item rounded-4" src="assests/img/VDS00983.JPG" alt="First slide">
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <div class="row gap-0 row-gap-3 grid justify-content-center">
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132536.png" alt="First slide">
+                <img class="img-item rounded-4" src="assests/img" alt="First slide">
               </div>
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 134034.png" alt="First slide">
+                <img class="img-item rounded-4" src="assests/img" alt="First slide">
               </div>
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 133303.png" alt="First slide">
+                <img class="img-item rounded-4" src="assests/img" alt="First slide">
               </div>
               <div class="col-6 col-sm-6 col-md-3 g-col-6">
-                <img class="img-item rounded-4" src="assests/img/Screenshot 2024-06-12 132828.png" alt="First slide">
+                <img class="img-item rounded-4" src="assests/img" alt="First slide">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row gap-0 row-gap-3 grid justify-content-center">
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img" alt="First slide">
+              </div>
+              <div class="col-6 col-sm-6 col-md-3 g-col-6">
+                <img class="img-item rounded-4" src="assests/img" alt="First slide">
               </div>
             </div>
           </div>
